@@ -1781,7 +1781,9 @@ Usage    : CHANT "SUMMON FOG"\n\r\
 Example  : chant "summon fog"\n\r\
 This chant will end droughts, and cause the air to be filled with cloudy \
 obscuring fog.  It will become difficult to see the ways in and out of \
-each location, and makes missile and siege combat difficult to impossible.
+each location, and makes missile and siege combat difficult to impossible. \
+Thankfully, this powerful magic dissipates more quickly than other weather \
+effects.
 
 CHANT_SUMMONFOOD=CHANT_SUMMON_FOOD
 CHANT_SUMMON_FOOD=<ABILITY>\
